--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -47,6 +47,8 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
+    needs: build
+    permissions: write-all
     steps:
       - name: Create release
         id: create_release
