--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -48,8 +48,7 @@ jobs:
   publish:
     runs-on: ubuntu-latest
     needs: build
-    permissions:
-      packages: write
+    permissions: write-all
     steps:
       - name: Create release
         id: create_release
