--- a/.github/workflows/nonprod.yaml
+++ b/.github/workflows/nonprod.yaml
@@ -3,7 +3,7 @@ name: Deploy Lambda Function
 on: 
   push:
     branches:
-      - lab
+      - main
 
 jobs:
 
@@ -49,36 +49,61 @@ jobs:
           name: zipped-bundle
           path: ${{ github.sha }}.zip
 
-  publish:
+  # Upload to s3 bucket
+  upload:
     runs-on: ubuntu-latest
     needs: build
-    permissions: write-all
     steps:
-      - name: Create release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.github_token }} # This token is provided by Actions, you do not need to create your own token
-        with:
-          tag_name: ${{ github.run_number }}
-          release_name: Release ${{ github.run_number }}
-          body: New release for ${{ github.sha }}. Release notes can be found in the docs.
-          draft: false
-          prerelease: false
-
       - name: Download artifact
         uses: actions/download-artifact@v2
         with:
           name: zipped-bundle
-
-      - name: Upload release asset
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.github_token }}
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./${{ github.sha }}.zip
-          asset_name: source_code_with_libraries.zip
-          asset_content_type: application/zip
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - name: Upload to S3
+        run: aws s3 cp ${{ github.sha }}.zip s3://github-action-practise-angrywombat/${{ github.repository }}/${{ github.sha }}.zip
 
+  nonprod:
+    runs-on: ubuntu-latest
+    needs: upload
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - name: Create test function
+        run: |
+            aws lambda create-function --function-name test-function \
+              --code S3Bucket=github-action-practise-angrywombat,S3Key=${{ github.repository }}/${{ github.sha }}.zip \
+              --handler lambda_function.lambda_handler --runtime python3.8 \
+              --role arn:aws:iam::${{ secrets.AWS_ACCOUNT_ID }}:role/MyLambdaBasicRoleForGithubAction
+      - name: Wait 30 seconds
+        run: sleep 30
+      - name: Destroy test function
+        if: ${{ always() }}
+        run: |
+            aws lambda delete-function --function-name test-function
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: upload
+    steps:
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - name: Update function code
+        run: |
+            aws lambda update-function-code \
+              --function-name test-function \
+              --s3-bucket github-action-practise-angrywombat \
+              --s3-key ${{ github.repository }}/${{ github.sha }}.zip \
+              --publish
