--- a/.github/workflows/deploy-pipeline.yaml
+++ b/.github/workflows/deploy-pipeline.yaml
@@ -1,9 +1,12 @@
 name: Deploy Lambda Function
-on: [push]
+on:
+  push:
+    paths:
+      - userguide.md
 
 permissions:
   contents: write
-  
+
 jobs:
 
   lint:
